--- a/Java/Lib/Joda-Time/learn-jdk8-time/pom.xml
+++ b/Java/Lib/Joda-Time/learn-jdk8-time/pom.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ Copyright (c) 2017. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
+  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
+  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
+  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.xzc.learn</groupId>
-	<artifactId>learn-joda-time</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<groupId>com.xzchaoo.learn</groupId>
+	<artifactId>learn-jdk8-time</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
 
 	<parent>
 		<groupId>com.xzchaoo.parent</groupId>
@@ -24,11 +32,7 @@
 			<artifactId>junit</artifactId>
 			<scope>compile</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-		</dependency>
 	</dependencies>
+
 
 </project>
